--- a/clock.html
+++ b/clock.html
@@ -9,10 +9,10 @@
     </head>
 
     <body>
-        <div class= "fiveoclocksomewhere">
+        <div class= "fiveOclockSomewhere">
 
-          <div id="CLOCK">05:00</div>  
-          <div id="DATE">2 21 2019</div>
+          <div id="clock"></div>  
+          <div id="date"></div>
 
         </div>
         <script src="clock.js"></script>
